# TokenDagger

./: .gitignore  Makefile  README.md  build_tokendagger.py  pyproject.toml  throughput_llama_1024mb.json  throughput_llama_256mb.json
src/: main.cpp  py_binding.cpp  tokenizer.model
src/tiktoken/: tiktoken.cpp  tiktoken.hpp
tests/: autogenned_test.py  code_performance_benchmark.py  main.py  performance_benchmark.py  test_tokendagger_vs_tiktoken.py  throughput_test.py
tests/output/: emoji.txt  lorem.txt  urban.txt
tiktoken/: tiktoken.hpp
tokendagger/: __init__.py  wrapper.py
