[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "tokendagger"
dynamic = ["version"]
description = "High-Performance Implementation of OpenAI's TikToken"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["tokenization", "tiktoken", "nlp", "text-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/M4THYOU/TokenDagger"
Repository = "https://github.com/M4THYOU/TokenDagger"
"Bug Reports" = "https://github.com/M4THYOU/TokenDagger/issues"

[project.optional-dependencies]
dev = [
    "tiktoken",
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["tokendagger"]

[tool.setuptools.package-data]
tokendagger = ["*.so", "*.pyd"]

[tool.setuptools.dynamic]
version = {attr = "tokendagger.__version__"} 